'Open in Colab' link adapted

--- a/notebooks/rome.ipynb
+++ b/notebooks/rome.ipynb
@@ -7,12 +7,12 @@
         "id": "b13177b7"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/kmeng01/rome/blob/main/notebooks/rome.ipynb\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" align=\"left\"/></a>&nbsp;or in a local notebook."
+        "<a href=\"https://github.com/khnhenriette/ProjectADL/blob/CausalTracingTrials/notebooks/rome.ipynb\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" align=\"left\"/></a>&nbsp;or in a local notebook."
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "id": "5416767c",
       "metadata": {
         "id": "5416767c"
@@ -29,7 +29,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "id": "b7a246a2",
       "metadata": {
         "id": "b7a246a2"
@@ -63,7 +63,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "id": "9bdfca4c",
       "metadata": {
         "id": "9bdfca4c"
@@ -87,7 +87,7 @@
         }
       },
       "id": "B_3ObfaVSS27",
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -153,7 +153,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "id": "aec81909",
       "metadata": {
         "scrolled": true,
@@ -186,7 +186,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "id": "7b5abe30",
       "metadata": {
         "id": "7b5abe30"
@@ -198,7 +198,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "id": "bb3c3c37",
       "metadata": {
         "scrolled": true,
@@ -473,7 +473,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "id": "0f24ec03",
       "metadata": {
         "id": "0f24ec03"
@@ -523,7 +523,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "id": "3c63d85f",
       "metadata": {
         "id": "3c63d85f"
@@ -535,7 +535,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "id": "c5820200",
       "metadata": {
         "scrolled": true,
@@ -1866,7 +1866,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "id": "bae6d743",
       "metadata": {
         "id": "bae6d743",
