--- a/notebooks/medium_fine_tune_math_hpo.ipynb
+++ b/notebooks/medium_fine_tune_math_hpo.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyMPYbS47j3wFfArrpGHenNG",
+      "authorship_tag": "ABX9TyOKeVYlGnx1ark6Y6v5kplX",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -3797,7 +3797,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Fine tune gpt2-medium for basic math tasks"
+        "## Hyper-Parameter optimization: Fine tune gpt2-medium for basic math tasks"
       ],
       "metadata": {
         "id": "bXR0Yo0N2M3I"
@@ -3816,7 +3816,7 @@
         "id": "p2InTPdNOF0d",
         "outputId": "db2466e5-14bd-4da5-8afd-b2b7261943b4"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3829,7 +3829,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -3915,7 +3915,8 @@
       ],
       "source": [
         "!pip install transformers datasets\n",
-        "!pip install torch\n"
+        "!pip install torch\n",
+        "!pip install optuna\n"
       ]
     },
     {
@@ -3954,7 +3955,7 @@
         "id": "UDgYwQ7o2MR3",
         "outputId": "fa477954-a1ba-4d98-f5f2-f434ffb0c783"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3978,7 +3979,7 @@
         "id": "_SjM4SMG714_",
         "outputId": "05b8a1db-6553-45e5-99f6-f67ce066d5f5"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4001,8 +4002,7 @@
     {
       "cell_type": "code",
       "source": [
-        "from transformers import GPT2Tokenizer, GPT2LMHeadModel, Trainer, TrainingArguments\n",
-        "\n",
+        "from transformers import GPT2Tokenizer, GPT2LMHeadModel\n",
         "# Load GPT-2 Medium tokenizer and model\n",
         "tokenizer = GPT2Tokenizer.from_pretrained(\"gpt2-medium\")\n",
         "model = GPT2LMHeadModel.from_pretrained(\"gpt2-medium\")"
@@ -4094,7 +4094,7 @@
         "id": "hXN3_hqBqCYw",
         "outputId": "7b924d98-65fb-46cd-dafa-5588aa2ae101"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4231,7 +4231,7 @@
         "id": "RC6yRuxzPGiB",
         "outputId": "7548b022-e2b1-43df-8e66-4b86761e0d65"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4267,7 +4267,7 @@
       "metadata": {
         "id": "DYgG7Bw7Tnr3"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4285,7 +4285,7 @@
         "id": "-lRcPWOkTqSm",
         "outputId": "9270a4e7-9f71-407a-82fa-37a0a58a5be1"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4336,7 +4336,7 @@
         "id": "yRtDqnikokE7",
         "outputId": "0dc87e14-e107-4cc0-9814-98bb5a73e0a4"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -4416,7 +4416,7 @@
         "id": "bZVaBpf0Nqcn",
         "outputId": "cbf046b1-8c94-4e80-a192-edca6cd11212"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -4457,16 +4457,83 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Train with hyperparameter optimization using optuna"
+      ],
+      "metadata": {
+        "id": "snqw5Sa34Tae"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
+        "import optuna\n",
+        "from transformers import TrainingArguments, Trainer\n",
         "\n",
-        "# Define training arguments\n",
+        "# Define the objective function for Optuna\n",
+        "def objective(trial):\n",
+        "    # Suggest hyperparameters\n",
+        "    learning_rate = trial.suggest_float(\"learning_rate\", 1e-6, 1e-4, log=True)\n",
+        "    batch_size = trial.suggest_categorical(\"batch_size\", [4, 8, 16])\n",
+        "    num_epochs = trial.suggest_int(\"num_epochs\", 1, 5)\n",
+        "\n",
+        "    # Define training arguments\n",
+        "    training_args = TrainingArguments(\n",
+        "        output_dir=\"./gpt2_finetuned_optuna\",\n",
+        "        evaluation_strategy=\"epoch\",\n",
+        "        learning_rate=learning_rate,\n",
+        "        per_device_train_batch_size=batch_size,\n",
+        "        num_train_epochs=num_epochs,\n",
+        "        save_steps=500,\n",
+        "        save_total_limit=2,\n",
+        "        logging_dir=\"./logs\",\n",
+        "        logging_steps=50,\n",
+        "    )\n",
+        "\n",
+        "    # Initialize Trainer\n",
+        "    trainer = Trainer(\n",
+        "        model=model,\n",
+        "        args=training_args,\n",
+        "        train_dataset=train_dataset,\n",
+        "        eval_dataset=eval_dataset,\n",
+        "        tokenizer=tokenizer,\n",
+        "    )\n",
+        "\n",
+        "    # Train the model and evaluate on validation set\n",
+        "    trainer.train()\n",
+        "    eval_results = trainer.evaluate()\n",
+        "\n",
+        "    # Use validation loss as the optimization metric\n",
+        "    return eval_results[\"eval_loss\"]\n",
+        "\n",
+        "# Run the hyperparameter search\n",
+        "study = optuna.create_study(direction=\"minimize\")\n",
+        "study.optimize(objective, n_trials=10, show_progress_bar=True)\n",
+        "print(\"Tested learning rates:\", [trial.params[\"learning_rate\"] for trial in study.trials])\n",
+        "\n",
+        "# Best hyperparameters\n",
+        "print(\"Best hyperparameters:\", study.best_params)\n"
+      ],
+      "metadata": {
+        "id": "jeTGIQax4Qhk"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# fine tune using best HPs\n",
+        "\n",
+        "best_hyperparams = study.best_params\n",
+        "\n",
         "training_args = TrainingArguments(\n",
-        "    output_dir=\"./gpt2_math_finetuned\",\n",
+        "    output_dir=\"./gpt2_finetuned_hpo\",\n",
         "    evaluation_strategy=\"epoch\",\n",
-        "    learning_rate=5e-5,\n",
-        "    num_train_epochs=5,\n",
-        "    per_device_train_batch_size=8,\n",
+        "    learning_rate=best_hyperparams[\"learning_rate\"],\n",
+        "    per_device_train_batch_size=best_hyperparams[\"batch_size\"],\n",
+        "    num_train_epochs=best_hyperparams[\"num_epochs\"],\n",
         "    save_steps=500,\n",
         "    save_total_limit=2,\n",
         "    logging_dir=\"./logs\",\n",
@@ -4474,7 +4541,6 @@
         "    push_to_hub=False,\n",
         ")\n",
         "\n",
-        "# Initialize Trainer\n",
         "trainer = Trainer(\n",
         "    model=model,\n",
         "    args=training_args,\n",
@@ -4483,218 +4549,13 @@
         "    tokenizer=tokenizer,\n",
         ")\n",
         "\n",
-        "# Start training\n",
         "trainer.train()\n"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 565
-        },
-        "id": "6u0y-hfi2T9a",
-        "outputId": "f09dd08d-bfac-493d-d71b-03c7438e167e"
+        "id": "jlMysLey4gZu"
       },
-      "execution_count": 12,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "/usr/local/lib/python3.10/dist-packages/transformers/training_args.py:1568: FutureWarning: `evaluation_strategy` is deprecated and will be removed in version 4.46 of 🤗 Transformers. Use `eval_strategy` instead\n",
-            "  warnings.warn(\n",
-            "<ipython-input-12-125b10286665>:16: FutureWarning: `tokenizer` is deprecated and will be removed in version 5.0.0 for `Trainer.__init__`. Use `processing_class` instead.\n",
-            "  trainer = Trainer(\n",
-            "\u001b[34m\u001b[1mwandb\u001b[0m: \u001b[33mWARNING\u001b[0m The `run_name` is currently set to the same value as `TrainingArguments.output_dir`. If this was not intended, please specify a different run name by setting the `TrainingArguments.run_name` parameter.\n",
-            "\u001b[34m\u001b[1mwandb\u001b[0m: Using wandb-core as the SDK backend.  Please refer to https://wandb.me/wandb-core for more information.\n"
-          ]
-        },
-        {
-          "output_type": "display_data",
-          "data": {
-            "text/plain": [
-              "<IPython.core.display.Javascript object>"
-            ],
-            "application/javascript": [
-              "\n",
-              "        window._wandbApiKey = new Promise((resolve, reject) => {\n",
-              "            function loadScript(url) {\n",
-              "            return new Promise(function(resolve, reject) {\n",
-              "                let newScript = document.createElement(\"script\");\n",
-              "                newScript.onerror = reject;\n",
-              "                newScript.onload = resolve;\n",
-              "                document.body.appendChild(newScript);\n",
-              "                newScript.src = url;\n",
-              "            });\n",
-              "            }\n",
-              "            loadScript(\"https://cdn.jsdelivr.net/npm/postmate/build/postmate.min.js\").then(() => {\n",
-              "            const iframe = document.createElement('iframe')\n",
-              "            iframe.style.cssText = \"width:0;height:0;border:none\"\n",
-              "            document.body.appendChild(iframe)\n",
-              "            const handshake = new Postmate({\n",
-              "                container: iframe,\n",
-              "                url: 'https://wandb.ai/authorize'\n",
-              "            });\n",
-              "            const timeout = setTimeout(() => reject(\"Couldn't auto authenticate\"), 5000)\n",
-              "            handshake.then(function(child) {\n",
-              "                child.on('authorize', data => {\n",
-              "                    clearTimeout(timeout)\n",
-              "                    resolve(data)\n",
-              "                });\n",
-              "            });\n",
-              "            })\n",
-              "        });\n",
-              "    "
-            ]
-          },
-          "metadata": {}
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "\u001b[34m\u001b[1mwandb\u001b[0m: Logging into wandb.ai. (Learn how to deploy a W&B server locally: https://wandb.me/wandb-server)\n",
-            "\u001b[34m\u001b[1mwandb\u001b[0m: You can find your API key in your browser here: https://wandb.ai/authorize\n",
-            "wandb: Paste an API key from your profile and hit enter, or press ctrl+c to quit:"
-          ]
-        },
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            " ··········\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "\u001b[34m\u001b[1mwandb\u001b[0m: Appending key for api.wandb.ai to your netrc file: /root/.netrc\n"
-          ]
-        },
-        {
-          "output_type": "display_data",
-          "data": {
-            "text/plain": [
-              "<IPython.core.display.HTML object>"
-            ],
-            "text/html": [
-              "Tracking run with wandb version 0.18.7"
-            ]
-          },
-          "metadata": {}
-        },
-        {
-          "output_type": "display_data",
-          "data": {
-            "text/plain": [
-              "<IPython.core.display.HTML object>"
-            ],
-            "text/html": [
-              "Run data is saved locally in <code>/content/wandb/run-20241127_172732-o9h81mo6</code>"
-            ]
-          },
-          "metadata": {}
-        },
-        {
-          "output_type": "display_data",
-          "data": {
-            "text/plain": [
-              "<IPython.core.display.HTML object>"
-            ],
-            "text/html": [
-              "Syncing run <strong><a href='https://wandb.ai/henriette-kohnen-tilburg-university/huggingface/runs/o9h81mo6' target=\"_blank\">./gpt2_math_finetuned</a></strong> to <a href='https://wandb.ai/henriette-kohnen-tilburg-university/huggingface' target=\"_blank\">Weights & Biases</a> (<a href='https://wandb.me/developer-guide' target=\"_blank\">docs</a>)<br/>"
-            ]
-          },
-          "metadata": {}
-        },
-        {
-          "output_type": "display_data",
-          "data": {
-            "text/plain": [
-              "<IPython.core.display.HTML object>"
-            ],
-            "text/html": [
-              " View project at <a href='https://wandb.ai/henriette-kohnen-tilburg-university/huggingface' target=\"_blank\">https://wandb.ai/henriette-kohnen-tilburg-university/huggingface</a>"
-            ]
-          },
-          "metadata": {}
-        },
-        {
-          "output_type": "display_data",
-          "data": {
-            "text/plain": [
-              "<IPython.core.display.HTML object>"
-            ],
-            "text/html": [
-              " View run at <a href='https://wandb.ai/henriette-kohnen-tilburg-university/huggingface/runs/o9h81mo6' target=\"_blank\">https://wandb.ai/henriette-kohnen-tilburg-university/huggingface/runs/o9h81mo6</a>"
-            ]
-          },
-          "metadata": {}
-        },
-        {
-          "output_type": "display_data",
-          "data": {
-            "text/plain": [
-              "<IPython.core.display.HTML object>"
-            ],
-            "text/html": [
-              "\n",
-              "    <div>\n",
-              "      \n",
-              "      <progress value='5625' max='5625' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
-              "      [5625/5625 36:35, Epoch 5/5]\n",
-              "    </div>\n",
-              "    <table border=\"1\" class=\"dataframe\">\n",
-              "  <thead>\n",
-              " <tr style=\"text-align: left;\">\n",
-              "      <th>Epoch</th>\n",
-              "      <th>Training Loss</th>\n",
-              "      <th>Validation Loss</th>\n",
-              "    </tr>\n",
-              "  </thead>\n",
-              "  <tbody>\n",
-              "    <tr>\n",
-              "      <td>1</td>\n",
-              "      <td>2.048400</td>\n",
-              "      <td>2.018290</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <td>2</td>\n",
-              "      <td>1.900300</td>\n",
-              "      <td>1.901672</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <td>3</td>\n",
-              "      <td>1.784200</td>\n",
-              "      <td>1.812512</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <td>4</td>\n",
-              "      <td>1.628000</td>\n",
-              "      <td>1.767855</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <td>5</td>\n",
-              "      <td>1.540100</td>\n",
-              "      <td>1.752768</td>\n",
-              "    </tr>\n",
-              "  </tbody>\n",
-              "</table><p>"
-            ]
-          },
-          "metadata": {}
-        },
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "TrainOutput(global_step=5625, training_loss=1.846523647732205, metrics={'train_runtime': 2233.1031, 'train_samples_per_second': 20.151, 'train_steps_per_second': 2.519, 'total_flos': 2611970703360000.0, 'train_loss': 1.846523647732205, 'epoch': 5.0})"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 12
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -4709,8 +4570,8 @@
       "cell_type": "code",
       "source": [
         "# Save the model and tokenizer\n",
-        "model.save_pretrained(\"./gpt2_math_finetuned\")\n",
-        "tokenizer.save_pretrained(\"./gpt2_math_finetuned\")\n"
+        "model.save_pretrained(\"./gpt2_finetuned_hpo\")\n",
+        "tokenizer.save_pretrained(\"./gpt2_finetuned_hpo\")\n"
       ],
       "metadata": {
         "colab": {
@@ -4719,7 +4580,7 @@
         "id": "jbPEpk543beA",
         "outputId": "ca0ed9c5-0b30-4209-8656-e9a9fa66f274"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4740,7 +4601,7 @@
     {
       "cell_type": "code",
       "source": [
-        "!zip -r gpt2_math_finetuned_new.zip ./gpt2_math_finetuned\n"
+        "!zip -r gpt2_finetuned_hpo.zip ./gpt2_finetuned_hpo\n"
       ],
       "metadata": {
         "colab": {
@@ -4749,7 +4610,7 @@
         "id": "hwvZ9Ll43c8f",
         "outputId": "1e3304ce-d5b8-499b-8851-1968dc716ab7"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4801,13 +4662,21 @@
       "metadata": {
         "id": "v8kg2mO2OTKB"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
         "# try out the model\n",
+        "\n",
+        "input_text = \"76 plus 24 equals\"\n",
+        "inputs = tokenizer(input_text, return_tensors=\"pt\")\n",
+        "outputs = model.generate(**inputs)\n",
+        "print(tokenizer.decode(outputs[0]))\n",
+        "\n",
+        "\n",
+        "\"\"\"\n",
         "\n",
         "# Generate text\n",
         "input_text = \"76 plus 24 equals\"\n",
@@ -4824,7 +4693,8 @@
         "# Decode and remove `<|endoftext|>` manually\n",
         "decoded_output = tokenizer.decode(outputs[0], skip_special_tokens=True).strip()\n",
         "print(decoded_output)\n",
-        "\n"
+        "\n",
+        "\"\"\""
       ],
       "metadata": {
         "colab": {
@@ -4833,7 +4703,7 @@
         "id": "1iDRc2-Fifl9",
         "outputId": "31a91b6f-dbe8-4e44-ff11-395813b01f2c"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4859,7 +4729,7 @@
         "id": "9WXGnWPlj1kQ",
         "outputId": "9c0ecd46-3996-4f24-e92c-12a8e34d8348"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
