started adapting code to new prompt structue

--- a/notebooks/average_causal_effects.ipynb
+++ b/notebooks/average_causal_effects.ipynb
@@ -39,7 +39,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "ylneHtzd1cs0"
       },
@@ -48,7 +48,7 @@
         "%%bash\n",
         "!(stat -t /usr/local/lib/*/dist-packages/google/colab > /dev/null 2>&1) && exit\n",
         "cd /content && rm -rf /content/rome\n",
-        "git clone --branch CausalTracingTrials --single-branch https://github.com/khnhenriette/ProjectADL rome > install.log 2>&1\n",
+        "git clone --branch math-medium --single-branch https://github.com/khnhenriette/ProjectADL rome > install.log 2>&1\n",
         "pip install -r /content/rome/scripts/colab_reqs/rome.txt >> install.log 2>&1\n",
         "pip install --upgrade google-cloud-storage >> install.log 2>&1"
       ],
@@ -56,7 +56,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "source": [
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive')"
+      ],
+      "metadata": {
+        "id": "OipnOayVAvKu"
+      },
+      "id": "OipnOayVAvKu",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "j2z43Qsf1cs3"
       },
@@ -77,7 +90,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -177,7 +190,7 @@
         "outputId": "f83ec086-38ef-4bd8-86a0-b875c24ceaeb"
       },
       "id": "uGa-T-NtfxpP",
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -374,7 +387,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "id": "26bba71c",
       "metadata": {
         "scrolled": false,
@@ -473,8 +486,8 @@
         "plt.rcParams[\"mathtext.fontset\"] = \"dejavuserif\"\n",
         "\n",
         "# Uncomment the architecture to plot.\n",
-        "arch = \"gpt2-medium\"\n",
-        "archname = \"GPT-2-Medium\"\n",
+        "arch = \"gpt2-medium-math\"\n",
+        "archname = \"GPT-2-Math\"\n",
         "\n",
         "# arch = \"gpt2-xl\"\n",
         "# archname = \"GPT-2-XL\"\n",
@@ -509,10 +522,17 @@
         "        return sum(datum.shape[0] for datum in self.d)\n",
         "\n",
         "\n",
-        "def read_knowlege(count=150, kind=None, arch=\"gpt2-medium\"):\n",
+        "def read_knowlege(count=150, kind=None, arch=\"gpt2-medium-math\"):\n",
         "    dirname = f\"results/{arch}/causal_trace/cases/\"\n",
         "    kindcode = \"\" if not kind else f\"_{kind}\"\n",
         "    (\n",
+        "        avg_fn, #first number\n",
+        "        avg_mo, #mathematical operator\n",
+        "        avg_sn, #second number\n",
+        "        avg_e, #equals\n",
+        "\n",
+        "        ### keep on adapting code from here!\n",
+        "\n",
         "        avg_fe,\n",
         "        avg_ee,\n",
         "        avg_le,\n",
@@ -524,7 +544,7 @@
         "        avg_fs,\n",
         "        avg_fle,\n",
         "        avg_fla,\n",
-        "    ) = [Avg() for _ in range(11)]\n",
+        "    ) = [Avg() for _ in range(4)]\n",
         "    for i in range(count):\n",
         "        try:\n",
         "            data = numpy.load(f\"{dirname}/knowledge_{i}{kindcode}.npz\")\n",
@@ -601,7 +621,7 @@
         "    title=None,\n",
         "    low_score=None,\n",
         "    high_score=None,\n",
-        "    archname=\"GPT2-Medium\",\n",
+        "    archname=\"GPT2-Math\",\n",
         "):\n",
         "    if low_score is None:\n",
         "        low_score = differences.min()\n",
@@ -689,7 +709,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "id": "c1fe3105",
       "metadata": {
         "colab": {
@@ -799,7 +819,7 @@
     {
       "cell_type": "code",
       "source": [
-        "!zip -r results_gpt2-medium.zip /content/rome/results/gpt2-medium\n"
+        "!zip -r results_gpt2-medium-math.zip /content/rome/results/gpt2-medium-math\n"
       ],
       "metadata": {
         "colab": {
@@ -809,7 +829,7 @@
         "outputId": "9b279bae-9150-4d77-9210-df77b03d5a28"
       },
       "id": "PfQ2NZ77QvDR",
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1308,7 +1328,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": null,
       "metadata": {
         "id": "90ba3338"
       },
@@ -1349,7 +1369,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": null,
       "metadata": {
         "id": "8ce71fd8",
         "colab": {
@@ -1372,7 +1392,7 @@
         }
       ],
       "source": [
-        "model_name = \"gpt2-medium\"  # \"gpt2-xl\" or \"EleutherAI/gpt-j-6B\" or \"EleutherAI/gpt-neox-20b\"\n",
+        "model_name = \"/content/drive/MyDrive/gpt2_finetuned_hpo\"  # \"gpt2-xl\" or \"EleutherAI/gpt-j-6B\" or \"EleutherAI/gpt-neox-20b\"\n",
         "mt = ModelAndTokenizer(\n",
         "    model_name,\n",
         "    low_cpu_mem_usage=IS_COLAB,\n",
@@ -1383,7 +1403,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": null,
       "metadata": {
         "id": "b0089c69",
         "colab": {
@@ -1402,7 +1422,7 @@
         }
       ],
       "source": [
-        "knowns = KnownsDataset(DATA_DIR)  # Dataset of known facts\n",
+        "knowns = KnownsDataset(\"/content/rome/dsets\")  # Dataset of known facts\n",
         "noise_level = 3 * collect_embedding_std(mt, [k[\"subject\"] for k in knowns])\n",
         "print(f\"Using noise level {noise_level}\")"
       ],
@@ -1432,7 +1452,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": null,
       "metadata": {
         "id": "a36b314e"
       },
@@ -1511,7 +1531,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": null,
       "metadata": {
         "scrolled": false,
         "id": "2d9b5a7c"
@@ -1625,7 +1645,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": null,
       "metadata": {
         "id": "427f3989",
         "colab": {
@@ -1657,14 +1677,14 @@
         }
       ],
       "source": [
-        "prefix = \"Megan Rapinoe plays the sport of\"\n",
-        "entity = \"Megan Rapinoe\"\n",
+        "prefix = \"9 plus 12 equals\"\n",
+        "subject = \"plus\"\n",
         "\n",
         "no_attn_r = calculate_hidden_flow_3(\n",
-        "    mt, prefix, entity, disable_mlp=True, noise=noise_level\n",
+        "    mt, prefix, subject, disable_mlp=True, noise=noise_level\n",
         ")\n",
-        "plot_trace_heatmap(no_attn_r, title=\"Impact with MLP at last subject token disabled\", modelname=\"GPT2-Medium\")\n",
-        "ordinary_r = calculate_hidden_flow_3(mt, prefix, entity, noise=noise_level)\n",
+        "plot_trace_heatmap(no_attn_r, title=\"Impact with MLP at mathematical operator token disabled\", modelname=\"GPT2-Math\")\n",
+        "ordinary_r = calculate_hidden_flow_3(mt, prefix, subject, noise=noise_level)\n",
         "plot_trace_heatmap(ordinary_r, title=\"Impact with MLP enabled as usual\")"
       ],
       "id": "427f3989"
@@ -1683,7 +1703,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": null,
       "metadata": {
         "scrolled": true,
         "id": "2926aeac"
@@ -1834,7 +1854,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": null,
       "metadata": {
         "id": "1631379e",
         "colab": {
@@ -1856,7 +1876,7 @@
         }
       ],
       "source": [
-        "plot_last_subject(mt, \"The Space Needle is in the city of\", \"The Space Needle\")"
+        "plot_last_subject(mt, \"9 plus 12 equals\", \"plus\")"
       ],
       "id": "1631379e"
     },
@@ -1874,7 +1894,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": null,
       "metadata": {
         "id": "e0d802d7",
         "colab": {
@@ -1974,7 +1994,7 @@
         "    ax.set_ylim(None, max(0.025, 0.055))\n",
         "\n",
         "    ax.legend(frameon=False)\n",
-        "fig.savefig(\"causal-trace-no-attn-mlp.pdf\", bbox_inches=\"tight\")\n",
+        "fig.savefig(\"causal-trace-no-attn-mlp-math.pdf\", bbox_inches=\"tight\")\n",
         "print([d[20] - d[10] for d in [avg_ordinary, avg_no_attn, avg_no_mlp]])\n",
         "print(avg_ordinary[15], avg_no_attn[15], avg_no_mlp[15])"
       ],
@@ -1983,7 +2003,7 @@
     {
       "cell_type": "code",
       "source": [
-        "!zip -r results_frozen_mlp_gpt2-medium.zip /content/rome/results/ct_disable_attn\n"
+        "!zip -r results_frozen_mlp_gpt2-medium-math.zip /content/rome/results/ct_disable_attn\n"
       ],
       "metadata": {
         "outputId": "a925e1a2-27c5-4c57-a3f3-414f6b067750",
@@ -1992,7 +2012,7 @@
         },
         "id": "WDhygqBMSfEa"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
