--- a/notebooks/average_causal_effects.ipynb
+++ b/notebooks/average_causal_effects.ipynb
@@ -533,12 +533,12 @@
         "\n",
         "        ### keep on adapting code from here!\n",
         "\n",
-        "        avg_fe,\n",
-        "        avg_ee,\n",
-        "        avg_le,\n",
-        "        avg_fa,\n",
-        "        avg_ea,\n",
-        "        avg_la,\n",
+        "        avg_fe, # first subj token\n",
+        "        avg_ee, # middle subj tokens\n",
+        "        avg_le, # last subject token\n",
+        "        avg_fa, # first token after subj\n",
+        "        avg_ea, # middle tokens after that\n",
+        "        avg_la, # last token\n",
         "        avg_hs,\n",
         "        avg_ls,\n",
         "        avg_fs,\n",
