code adapted - only 'plot line graph' section needs adaptation now

--- a/notebooks/average_causal_effects.ipynb
+++ b/notebooks/average_causal_effects.ipynb
@@ -531,14 +531,6 @@
         "        avg_sn, #second number\n",
         "        avg_e, #equals\n",
         "\n",
-        "        ### keep on adapting code from here!\n",
-        "\n",
-        "        avg_fe, # first subj token\n",
-        "        avg_ee, # middle subj tokens\n",
-        "        avg_le, # last subject token\n",
-        "        avg_fa, # first token after subj\n",
-        "        avg_ea, # middle tokens after that\n",
-        "        avg_la, # last token\n",
         "        avg_hs,\n",
         "        avg_ls,\n",
         "        avg_fs,\n",
@@ -554,63 +546,59 @@
         "        if \"correct_prediction\" in data and not data[\"correct_prediction\"]:\n",
         "            continue\n",
         "        scores = data[\"scores\"]\n",
-        "        first_e, first_a = data[\"subject_range\"]\n",
-        "        last_e = first_a - 1\n",
-        "        last_a = len(scores) - 1\n",
+        "        first_e, first_a = data[\"subject_range\"] # subject / operator start and token after / second number\n",
+        "        first_n = first_e - 1 # first number\n",
+        "        last_a = len(scores) - 1 # equals\n",
         "        # original prediction\n",
         "        avg_hs.add(data[\"high_score\"])\n",
         "        # prediction after subject is corrupted\n",
         "        avg_ls.add(data[\"low_score\"])\n",
         "        avg_fs.add(scores.max())\n",
         "        # some maximum computations\n",
-        "        avg_fle.add(scores[last_e].max())\n",
+        "        avg_fle.add(scores[first_e].max()) # fle now for math operator\n",
         "        avg_fla.add(scores[last_a].max())\n",
-        "        # First subject middle, last subjet.\n",
-        "        avg_fe.add(scores[first_e])\n",
-        "        avg_ee.add_all(scores[first_e + 1 : last_e])\n",
-        "        avg_le.add(scores[last_e])\n",
-        "        # First after, middle after, last after\n",
-        "        avg_fa.add(scores[first_a])\n",
-        "        avg_ea.add_all(scores[first_a + 1 : last_a])\n",
-        "        avg_la.add(scores[last_a])\n",
+        "        # first number\n",
+        "        avg_fn.add(scores[first_n])\n",
+        "        # mathematical operator\n",
+        "        avg_mo.add(scores[first_e])\n",
+        "        # second number\n",
+        "        avg_sn.add(scores[first_a])\n",
+        "        # equals\n",
+        "        avg_e.add(scores[last_a])\n",
         "\n",
         "    result = numpy.stack(\n",
         "        [\n",
-        "            avg_fe.avg(),\n",
-        "            avg_ee.avg(),\n",
-        "            avg_le.avg(),\n",
-        "            avg_fa.avg(),\n",
-        "            avg_ea.avg(),\n",
-        "            avg_la.avg(),\n",
+        "            avg_fn.avg(),\n",
+        "            avg_mo.avg(),\n",
+        "            avg_sn.avg(),\n",
+        "            avg_e.avg(),\n",
         "        ]\n",
         "    )\n",
         "    result_std = numpy.stack(\n",
         "        [\n",
-        "            avg_fe.std(),\n",
-        "            avg_ee.std(),\n",
-        "            avg_le.std(),\n",
-        "            avg_fa.std(),\n",
-        "            avg_ea.std(),\n",
-        "            avg_la.std(),\n",
+        "            avg_fn.std(),\n",
+        "            avg_mo.std(),\n",
+        "            avg_sn.std(),\n",
+        "            avg_e.std(),\n",
         "        ]\n",
         "    )\n",
         "    print(\"Average Total Effect\", avg_hs.avg() - avg_ls.avg())\n",
         "    print(\n",
-        "        \"Best average indirect effect on last subject\",\n",
-        "        avg_le.avg().max() - avg_ls.avg(),\n",
+        "        \"Best average indirect effect on mathematical operator\",\n",
+        "        avg_mo.avg().max() - avg_ls.avg(),\n",
         "    )\n",
         "    print(\n",
-        "        \"Best average indirect effect on last token\", avg_la.avg().max() - avg_ls.avg()\n",
+        "        \"Best average indirect effect on last token\", avg_e.avg().max() - avg_ls.avg()\n",
         "    )\n",
         "    print(\"Average best-fixed score\", avg_fs.avg())\n",
-        "    print(\"Average best-fixed on last subject token score\", avg_fle.avg())\n",
-        "    print(\"Average best-fixed on last word score\", avg_fla.avg())\n",
-        "    print(\"Argmax at last subject token\", numpy.argmax(avg_le.avg()))\n",
-        "    print(\"Max at last subject token\", numpy.max(avg_le.avg()))\n",
-        "    print(\"Argmax at last prompt token\", numpy.argmax(avg_la.avg()))\n",
-        "    print(\"Max at last prompt token\", numpy.max(avg_la.avg()))\n",
+        "    print(\"Average best-fixed on mathematical operator token score\", avg_fle.avg())\n",
+        "    print(\"Average best-fixed on 'equals' score\", avg_fla.avg())\n",
+        "    print(\"Argmax at mathematical operator token\", numpy.argmax(avg_mo.avg()))\n",
+        "    print(\"Max at mathematical operator token\", numpy.max(avg_mo.avg()))\n",
+        "    print(\"Argmax at last prompt token\", numpy.argmax(avg_e.avg()))\n",
+        "    print(\"Max at last prompt token\", numpy.max(avg_e.avg()))\n",
         "    return dict(\n",
-        "        low_score=avg_ls.avg(), result=result, result_std=result_std, size=avg_fe.size()\n",
+        "        low_score=avg_ls.avg(), result=result, result_std=result_std, size=avg_mo.size()\n",
         "    )\n",
         "\n",
         "\n",
@@ -629,11 +617,9 @@
         "        high_score = differences.max()\n",
         "    answer = \"AIE\"\n",
         "    labels = [\n",
-        "        \"First subject token\",\n",
-        "        \"Middle subject tokens\",\n",
-        "        \"Last subject token\",\n",
-        "        \"First subsequent token\",\n",
-        "        \"Further tokens\",\n",
+        "        \"First number token\",\n",
+        "        \"Mathematical operator token\",\n",
+        "        \"Second number token\",\n",
         "        \"Last token\",\n",
         "    ]\n",
         "\n",
@@ -772,6 +758,9 @@
       ],
       "source": [
         "import math\n",
+        "\n",
+        "\n",
+        "### still need to adapt this\n",
         "\n",
         "labels = [\n",
         "    \"First subject token\",\n",
@@ -1940,7 +1929,7 @@
       "source": [
         "import tqdm\n",
         "\n",
-        "knowns = KnownsDataset(DATA_DIR)\n",
+        "knowns = KnownsDataset(\"/content/rome/dsets\")\n",
         "all_ordinary = []\n",
         "all_no_attn = []\n",
         "all_no_mlp = []\n",
